tests/fixtures/union_type_candidates.out
error: Revealed type is: P::[Integer]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:16
     16 |    reveal_type(wrap(123))
                         ^^^^^^^^^ expression

error: Revealed type is: P::[Integer]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:17
     17 |    reveal_type(wrap(P.new(123)))
                         ^^^^^^^^^^^^^^^^ expression

error: Revealed type is: P::[t2]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:22
     22 |    reveal_type(wrap((nil : :any)))
                         ^^^^^^^^^^^^^^^^^^ expression

error: Revealed type is: P::[Integer]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:30
     30 |    reveal_type(wrap2([123]))
                         ^^^^^^^^^^^^ expression

error: Revealed type is: P::[String]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:31
     31 |    reveal_type(wrap2(P.new("foo")))
                         ^^^^^^^^^^^^^^^^^^^ expression

error: Revealed type is: P::[t23]

        @ __ROOT__/tests/fixtures/union_type_candidates.rb:32
     32 |    reveal_type(wrap2((nil : :any)))
                         ^^^^^^^^^^^^^^^^^^^ expression
